# prometheus-s3-exporter

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
argocd-deploy/: deployment.yaml  service-monitor.yaml  service.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service-monitor.yaml  service.yaml
local-deploy/: docker-compose.yml
src/: Dockerfile  client.py  config.yaml
