[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prometheus-s3-exporter"
version = "0.1.0"
description = "Prometheus S3 Exporter for scrap metrics from buckets"
requires-python = ">=3.8"
dependencies = [
    "boto3==1.37.37",
    "prometheus_client==0.21.1",
    "PyYAML==6.0.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'


[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disable_error_code = ["import-untyped", "no-untyped-def"]

[tool.flake8]
max-line-length = 100
exclude = [
    ".gitignore",
    "__pycache__",
    "./docs",
    "./dev",
    "./tests",
]